--- a/index.html
+++ b/index.html
@@ -361,12 +361,12 @@
             </div>
             <div class="photo">
                 <img class="m" src="./image/con5_mob.png" alt="오륙도페이 모바일버전 이미지">
-                <img class="pc" src="./image/con5_pc.png" alt="오륙도페이 pc버전 이미지">
+                <img class="pc" src="./image/con5_pc.PNG" alt="오륙도페이 pc버전 이미지">
             </div>
             <div class="bottom">
                 <div class="wrap">
                     <div class="left">
-                        <img src="./image/con5_logo.png" alt="부산 남구 로고">
+                        <img src="./image/con5_logo.PNG" alt="부산 남구 로고">
                         <div class="text">
                             지금 바로 앱 다운로드하고,<br>
                             <span>오륙도 페이 카드</span> 혜택 누리기
@@ -375,7 +375,7 @@
                     <div class="right">
                         <div class="qr">
                             <a href="#">
-                                <img src="./image/qr code.png" alt="큐알코드">
+                                <img src="./image/qr code.PNG" alt="큐알코드">
                             </a>
                         </div>
                         <div class="down">
@@ -387,7 +387,7 @@
                             </div>
                             <div class="appstore">
                                 <a href="#">
-                                    <img src="./image/appstore.png" alt="앱스토어">
+                                    <img src="./image/appstore.PNG" alt="앱스토어">
                                     App Store 다운로드
                                 </a>
                             </div>
